--- a/src/components/GameOverPrompt/GameOverPrompt.module.scss
+++ b/src/components/GameOverPrompt/GameOverPrompt.module.scss
@@ -54,13 +54,13 @@ div.playerWrapper {
 
 .yes {
   & > svg {
-    color: green;
+    color: var(--affirmative);
   }
 }
 
 .no {
   & > svg {
-    color: red;
+    color: var(--negative);
   }
 }
 
